# Breakout

./: .gitignore  README.md  build_exe.cmd  pyproject.toml  test.cmd
breakout/: __init__.py  __main__.py  ball.py  bricks.py  paddle.py  powerups.py  score.py  screens.py  sound.py  sprite.py
tests/: test_ball.py  test_ball_paddle.py  test_game.py  test_powerups.py  test_score.py
