[tool.poetry]
name = "breakout"
version = "0.1.0"
description = "CMSC 495 Capstone Project implementing the game Breakout in Python"
authors = ["TRJackson998 <85368064+TRJackson998@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pygame = "^2.6.1"
pyinstaller = "^6.11.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
